# hackathon_unicaribe

./: README.md
backend/: .gitignore  app.py  pyproject.toml
backend/data/: departamentos.csv  directorio_unicaribe.csv  edificios.csv  unicaribe.db
backend/scrapper/: app.py  pyproject.toml
backend/scrapper/data/: profesores.csv
backend/scrapper/src/: notificaciones.py  scrapper.py
backend/src/: notificaciones.py  scrapper.py
flutter_app/ubicaribe/: PROGRESO.md  README.md  pubspec.yaml
flutter_app/ubicaribe/android/app/: build.gradle.kts
flutter_app/ubicaribe/assets/: unicaribe.db
flutter_app/ubicaribe/ios/Runner/: Info.plist
flutter_app/ubicaribe/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/ubicaribe/lib/: main.dart
flutter_app/ubicaribe/lib/database/: db_helper.dart  unicaribe.db
flutter_app/ubicaribe/lib/models/: departamento.dart  edificio.dart  notificacion.dart  profesor.dart
flutter_app/ubicaribe/lib/screens/: ar_camera_screen.dart  avisos_screen.dart  edificio_detalle_screen.dart  edificios_screen.dart  home_screen.dart
flutter_app/ubicaribe/lib/theme/: app_colors.dart
flutter_app/ubicaribe/lib/widgets/: ar_promo_banner.dart  custom_header.dart  custom_search_bar.dart  quick_access_grid.dart
flutter_app/ubicaribe/linux/: CMakeLists.txt
flutter_app/ubicaribe/linux/runner/: my_application.cc
flutter_app/ubicaribe/test/: widget_test.dart
flutter_app/ubicaribe/web/: index.html  manifest.json
flutter_app/ubicaribe/windows/: CMakeLists.txt
flutter_app/ubicaribe/windows/runner/: Runner.rc  (+1 more)
scrapper/: pyproject.toml
(+5 files in other folders)
