[project]
name = "scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2wsgi>=1.10.0",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.135.1",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "uvicorn>=0.41.0",
]
